# conf-syncer

./: CMakeLists.txt  backup.cxx  conf-syncer-utils.h  gen-conf-c.h  gen-conf-main.cxx  gen-conf-py.h  gen-conf-structs.h  gen-conf-utils.h  setup.py.in
lib/: conf-regex-backup.h  conf-regex.h  gen-conf-main.cxx  gen-conf-main.h  main.c
